# server

./: '  ._bitwarden-server.sln  .dccache  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .mega-linter.yml  CANARY-FIXES.md  CANARY-ISSUES.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  FreeAccount.json  ISSUE_TEMPLATE.md  LICENSE.txt  LICENSE_AGPL.txt  LICENSE_BITWARDEN.txt  LICENSE_FAQ.md  NuGet.Config  README.md  SECURITY.md  SETUP.md  TRADEMARK_GUIDELINES.md  \  appveyor.yml  bitwarden-core.sln  bitwarden-server.sln  bitwarden-server.sln.DotSettings  bitwarden-server.slnx  bitwarden.ps1  bitwarden.sln  build-ci.sh  build.Dockerfile  build.ps1  build.sh  code-review-2026-02-24.md  docker-compose.yml  (+12 more)
.aspire/: settings.json
.checkmarx/: config.yml
.claude/: CLAUDE.md  CONTRIBUTING.md  settings.json  settings.local.json
.config/: dotnet-tools.json
.devcontainer/: README.md
.git-hooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml  community-pr-label.yml  label-pr.json  platform-community-paths.yml  release.yml  renovate.json  renovate.json5
.run/: Full Server - Self-hosted.run.xml  Full Server.run.xml  Min Server - Self-hosted.run.xml  Min Server.run.xml
AppHost/: AppHost.cs  AppHost.csproj  BuilderExtensions.cs  README.md  appsettings.Development.json  packages.lock.json
ServiceDefaults/: Extensions.cs  ServiceDefaults.csproj
akd/: .gitignore  Cargo.toml  rust-toolchain.toml
akd/crates/aio/: Cargo.toml
akd/crates/aio/src/: config.rs  main.rs
akd/crates/akd-verifier/: Cargo.toml
akd/crates/akd-verifier-uniffi/: Cargo.toml
akd/crates/akd-verifier-uniffi/src/: lib.rs
akd/crates/akd-verifier-wasm/: Cargo.toml
akd/crates/akd-verifier-wasm/src/: lib.rs
akd/crates/akd-verifier/src/: error.rs  lib.rs  models.rs  verifier.rs  verify.rs
akd/crates/akd-verifier/tests/: orchestration.rs
akd/crates/akd-verifier/tests/common/: mod.rs
akd/crates/akd_storage/: Cargo.toml
akd/crates/akd_storage/migrations/ms_sql/20251002_01_create_azks_table/: down.sql  up.sql
akd/crates/akd_storage/migrations/ms_sql/20251002_02_create_history_tree_nodes_table/: down.sql  up.sql
akd/crates/akd_storage/migrations/ms_sql/20251002_03_create_values_table/: down.sql  up.sql
akd/crates/akd_storage/migrations/ms_sql/20251211_01_create_vrf_key_table/: down.sql  up.sql
akd/crates/akd_storage/migrations/ms_sql/20260112_01_create_publish_queue/: down.sql  up.sql
akd/crates/akd_storage/src/: akd_database.rs  akd_storage_config.rs  db_config.rs  lib.rs  migrations.rs  ms_sql.rs  ms_sql_storable.rs  publish_queue.rs  publish_queue_config.rs  sql_params.rs  temp_table.rs  vrf_key_config.rs  vrf_key_database.rs
akd/crates/akd_storage/src/audit_storage/: config.rs  filesystem.rs  mod.rs
akd/crates/akd_storage/src/ms_sql/: migrations.rs  mod.rs  sql_params.rs
akd/crates/akd_storage/src/ms_sql/tables/: akd_storable_for_ms_sql.rs  mod.rs  publish_queue.rs  temp_table.rs  values.rs  vrf_key.rs
akd/crates/akd_storage/src/tables/: mod.rs  values.rs
akd/crates/akd_test_utility/: Cargo.toml
akd/crates/akd_test_utility/src/: commands.rs  directory_host.rs  main.rs
akd/crates/bitwarden-akd-configuration/: Cargo.toml
akd/crates/bitwarden-akd-configuration/src/: bitwarden_v1_configuration.rs  config.rs  lib.rs  request_models.rs  uniffi_scaffolding.rs  wire_models.rs
akd/crates/bitwarden-akd-configuration/tests/: init_context.rs
akd/crates/bitwarden-encoding/: Cargo.toml  README.md
akd/crates/bitwarden-encoding/src/: b64.rs  b64url.rs  lib.rs  serde.rs
akd/crates/common/: Cargo.toml
akd/crates/common/src/: lib.rs  vrf_type.rs
akd/crates/common/src/config/: mod.rs  storage_manager_config.rs  vrf_config.rs
akd/crates/macros/: Cargo.toml
akd/crates/macros/example_migrations/20250930_01_initial/: up.sql
akd/crates/macros/src/: lib.rs
akd/crates/macros/tests/: load_migrations.rs  migration.rs
akd/crates/macros/tests/compile_panics/: load_migrations.rs  load_migrations.stderr  migration.rs  migration.stderr
akd/crates/ms_database/: Cargo.toml
akd/crates/ms_database/src/: lib.rs  migrate.rs  pool.rs
akd/crates/publisher/: Cargo.toml
akd/crates/publisher/src/: config.rs  lib.rs  main.rs
akd/crates/publisher/src/routes/: health.rs  mod.rs  publish.rs
akd/crates/publisher/tests/: auth_tests.rs
akd/crates/reader/: Cargo.toml
akd/crates/reader/src/: config.rs  epoch_tracker.rs  error.rs  lib.rs  main.rs
akd/crates/reader/src/routes/: audit.rs  batch_lookup.rs  get_epoch_hash.rs  get_public_key.rs  health.rs  key_history.rs  lookup.rs  mod.rs  response_types.rs
attachments/: Dockerfile  build.ps1  build.sh  entrypoint.sh
bitwarden_license/: README.md
dev/: .env.example  .gitignore  OFFLINE_DEVELOPMENT.md  add-dc-profile.sh  authsources.php.example  create_certificates_linux.sh  create_certificates_mac.sh  create_certificates_openssl.sh  create_certificates_windows.ps1  docker-compose-seeder.yml  docker-compose.mysql.yml  docker-compose.yml  ef_migrate.ps1  generate_openapi_files.ps1  index.md  install_cloud.ps1  migrate.ps1  migrate_migration_record.ps1  modify_database.ps1  mssql_migrate.ps1  pam-daemon-key.py  pam-rotation-sim.py  reverse-proxy.conf.example  secret.json.example  secrets.json.example  seed.ps1  seeds.json  servicebusemulator_config.json  setup_azurite.ps1  setup_secrets.ps1  verify_migrations.ps1
docker/: .env.example  Docker.dcproj  Dockerfile.service-admin  Dockerfile.service-api  Dockerfile.service-identity  bwlite-entrypoint.sh  bwlite-supervisord.conf  bwlite-supervisord.ini  bwlite.Dockerfile  docker-compose.yml  (+11 more)
docker-lite/: .env.example  Dockerfile  bwlite-supervisord.ini  bwlite.Dockerfile  docker-compose.yml  entrypoint.sh  global-settings.env  supervisord.conf  supervisord.ini
docker-unified/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  global-settings.env  settings.env
util/RustSdk/rust/: Cargo.toml  build.rs
util/RustSdk/rust/src/: attachment.rs  cipher.rs  crypto_util.rs  lib.rs  provider.rs  rsa_keys.rs
(+17030 files in other folders)
