[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Bitwarden Inc"]
license-file = "LICENSE"
keywords = ["akd", "key transparency"]

[workspace.lints.clippy]
unused_async = "deny"
unwrap_used = "deny"

[workspace.dependencies]
akd = "0.11.0"
async-trait = "0.1.89"
akd_storage = { path = "crates/akd_storage" }
bitwarden-akd-configuration = { path = "crates/bitwarden-akd-configuration" }
common = { path = "crates/common" }
config = "0.15.18"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = {version = "0.3.19" }
