[package]
name = "bitwarden-akd-configuration"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
akd.workspace = true
bitwarden-encoding = { workspace = true }
blake3.workspace = true
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = ">=1.0.96, <2.0"

[lints]
workspace = true

[features]
tracing = ["dep:tracing"]
request_models = ["dep:serde"]
multi_directory = []
default = ["tracing", "request_models"]
