[package]
name = "bitwarden-encoding"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
default = []

[dependencies]
data-encoding = ">=2.0, <3"
data-encoding-macro = "0.1.18"
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
serde_json = ">=1.0.96, <2.0"

[lints]
workspace = true
