[package]
name = "common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
akd = "0.11.0"
async-trait = { workspace = true }
akd_storage = { workspace = true}
config = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.17"
tracing.workspace = true

[lints]
workspace = true
