[package]
name = "common"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
akd.workspace = true
async-trait = { workspace = true }
akd_storage = { workspace = true }
bitwarden-akd-configuration = { workspace = true }
bitwarden-encoding = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
hex = "0.4.3"

[lints]
workspace = true
