[package]
name = "ms_database"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
bb8 = "0.9.0"
macros = { path = "../macros" }
thiserror = "2.0.17"
tiberius = { version = "0.12.3", features = ["chrono", "tokio"] }
tokio = "1.47.1"
tokio-util = {version = "0.7.16", features = ["compat"] }

[lints]
workspace = true
