[package]
name = "ms_database"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1.89"
bb8 = "0.9.0"
macros = { path = "../macros" }
thiserror = "2.0.17"
tokio = {workspace = true}
tokio-util = {version = "0.7.16", features = ["compat"] }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tiberius = { version = "0.12.3", default-features = false, features = ["chrono", "tokio", "rustls"] }

[target.'cfg(not(target_os = "macos"))'.workspace.dependencies]
tiberius = { version = "0.12.3", features = ["chrono", "tokio"] }


[lints]
workspace = true
