[package]
name = "reader"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
akd = { workspace = true, features = ["serde_serialization"] }
akd_storage = { workspace = true }
anyhow = { workspace = true }
bitwarden-akd-configuration = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
bitwarden-encoding = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
