[package]
name = "sdk"
publish = false

version = "0.1.0"
authors = ["Bitwarden Inc"]
edition = "2021"
homepage = "https://bitwarden.com"
repository = "https://github.com/bitwarden/server"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
bitwarden-core = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7080159154a42b59028ccb9f5af62bf087e565f9" }
bitwarden-crypto = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7080159154a42b59028ccb9f5af62bf087e565f9" }
serde = "=1.0.219"
serde_json = "=1.0.141"

[build-dependencies]
csbindgen = "=1.9.3"

# Compile all dependencies with some optimizations when building this crate on debug
# This slows down clean builds by about 50%, but the resulting binaries can be orders of magnitude faster
# As clean builds won't occur very often, this won't slow down the development process
[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
